# alphaforge

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
alphaforge/: __init__.py
alphaforge/data/: cache.py  context.py  fred_source.py  panel.py  query.py  schema.py  source.py  universe.py
alphaforge/diagnostics/: fingerprint.py  importance.py  leakage.py  quality.py
alphaforge/features/: calendar_flags.py  dag.py  dataset_builder.py  dataset_spec.py  frame.py  ids.py  ops.py  realization.py  target_horizon.py  target_template.py  template.py
alphaforge/pit/: __init__.py  accessor.py  ref_entity.py
alphaforge/splits/: splits.py
alphaforge/store/: __init__.py  cache.py  duckdb_parquet.py  local_parquet.py  raw_data_store.py  store.py
alphaforge/time/: __init__.py  align.py  calendar.py  event_grid.py  events.py  grids.py  ref_period.py
alphaforge_demo_store/meta/: lag_returns_1.0_a05b198a99aa459e.json  (+1 more)
docs/: pit.md
examples/: dummy_source.py  features_lag_returns.py  features_macro_carry.py  run_mvp_demo.py
notebooks/: nb_load_data.ipynb
tests/: conftest.py  test_align.py  test_dataset_builder_alignment.py  test_ducdb_store_roundtrip.py  test_eventsource_resolution.py  test_feature_template_asof_respected.py  test_importance.py  test_intraday_core.py  test_intraday_dataset_and_asof.py  test_intraday_dst_integration.py  test_join.py  test_local_store_roundtrip.py  test_materialize.py  test_panel.py  test_pit_accessor.py  test_realization.py  test_ref_period.py  test_template_leak_detection.py  test_tiingo_daily_mapping.py  test_trading_calendar_dst.py
(+4 files in other folders)
