[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphaforge"
version = "0.0.1"
description = "Point-in-time feature graphs for financial ML"
requires-python = ">=3.10"
dependencies = ["pandas", "numpy", "python-dateutil>=2.9.0.post0"]

[tool.setuptools]
packages = ["alphaforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
